--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <h1 id="level-title">Click Anywhere Key to Start</h1>
+  <h1 id="level-title">Click Anywhere to Start</h1>
   <div class="container">
     <div class="row">
 
